[gd_scene load_steps=6 format=2]

[ext_resource path="res://Potra.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Clocky.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 125
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]

[node name="Parent" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.008
margin_left = -1.0
margin_top = -2.0
margin_right = 1.0
margin_bottom = 0.200012
theme = SubResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TimeCenter" type="CenterContainer" parent="CanvasLayer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 81.0
margin_top = 226.0
margin_right = -76.0
margin_bottom = -232.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="CanvasLayer/Panel/TimeCenter"]
margin_right = 869.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 2 )
text = "Current Time"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsAlign" type="HBoxContainer" parent="CanvasLayer/Panel"]
margin_left = 1.0
margin_top = 490.0
margin_right = 1025.0
margin_bottom = 596.0
size_flags_horizontal = 2
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="SetHour" type="Button" parent="CanvasLayer/Panel/ButtonsAlign"]
margin_left = 296.0
margin_right = 370.0
margin_bottom = 106.0
text = "Set Hours"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetMinute" type="Button" parent="CanvasLayer/Panel/ButtonsAlign"]
margin_left = 374.0
margin_right = 462.0
margin_bottom = 106.0
text = "Set Minutes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetSnooze" type="Button" parent="CanvasLayer/Panel/ButtonsAlign"]
margin_left = 466.0
margin_right = 548.0
margin_bottom = 106.0
text = "Set Snooze"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetAlarm1" type="Button" parent="CanvasLayer/Panel/ButtonsAlign"]
margin_left = 552.0
margin_right = 638.0
margin_bottom = 106.0
text = "Set Alarm 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetAlarm2" type="Button" parent="CanvasLayer/Panel/ButtonsAlign"]
margin_left = 642.0
margin_right = 728.0
margin_bottom = 106.0
text = "Set Alarm 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoursBox" type="TextEdit" parent="CanvasLayer/Panel"]
margin_left = 345.0
margin_top = 434.0
margin_right = 465.0
margin_bottom = 474.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinsBox" type="TextEdit" parent="CanvasLayer/Panel"]
margin_left = 569.0
margin_top = 434.0
margin_right = 689.0
margin_bottom = 474.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Panel"]
margin_left = 385.0
margin_top = 410.0
margin_right = 425.0
margin_bottom = 424.0
text = "Hours"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/Panel"]
margin_left = 609.0
margin_top = 410.0
margin_right = 661.0
margin_bottom = 424.0
text = "Minutes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/Panel"]
margin_right = 321.0
margin_bottom = 130.0
theme = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alarm1Text" type="Label" parent="CanvasLayer/Panel/Panel"]
margin_left = 9.0
margin_top = 10.0
margin_right = 61.0
margin_bottom = 24.0
text = "Alarm 1: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alarm2Text" type="Label" parent="CanvasLayer/Panel/Panel"]
margin_left = 9.0
margin_top = 34.0
margin_right = 67.0
margin_bottom = 48.0
text = "Alarm 2: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SnoozeText" type="Label" parent="CanvasLayer/Panel/Panel"]
margin_left = 9.0
margin_top = 60.0
margin_right = 67.0
margin_bottom = 74.0
text = "Snooze Time: "
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/Panel/ButtonsAlign/SetHour" to="." method="_on_SetHour_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/ButtonsAlign/SetMinute" to="." method="_on_SetMinute_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/ButtonsAlign/SetSnooze" to="." method="_on_SetSnooze_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/ButtonsAlign/SetAlarm1" to="." method="_on_SetAlarm1_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/ButtonsAlign/SetAlarm2" to="." method="_on_SetAlarm2_pressed"]
